# Pet

./: CMakeLists.txt  README.md  imgs.qrc  main.cpp  mywidget.cpp  mywidget.h
